# r2g-arango

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN-mapping-ui-catalog-reingest.md  PRD-gemini.md  PRD-notebooklm.md  PRD.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.cursor/rules/: arango-frontend-rules.mdc  ui-architecture.mdc  workflow.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docker/: load-samples.sh
docker/csv_demo/: authors.csv  books.csv  loans.csv  members.csv
docker/mssql_demo/: schema.sql
docker/mysql_demo/: schema.sql
docs/: PRD.md  README.md
docs/internal/: DESIGN-rsa-compat-layer.md  PLAN-classification-entitlement.md  PLAN-code-quality-remediation.md  PLAN-denormalization-analysis.md  PLAN-external-data-catalogs.md  PLAN-llm-ontology-derivation.md  PLAN-mapping-ui-catalog-reingest.md  PLAN-rsa-dependency-reversal.md  README.md
docs/marketing/: medium-article-draft.md  one-pager.md
examples/: sample_mapping.yaml
src/r2g/: __init__.py  catalog.py  classification.py  config.py  config_migrate.py  csi.py  data_validator.py  denorm.py  dlq.py  expressions.py  fk_inference.py  governance.py  keys.py  log.py  main.py  mapping_diff.py  masking.py  mcp_server.py  naming.py  r2rml.py  rsa_ontology.py  schema_diff.py  security.py  selective_reload.py  topo_sort.py  types.py
src/r2g/catalogs/: __init__.py  base.py  openmetadata.py
src/r2g/cdc/: __init__.py  conflict.py  delta_transformer.py  handler.py  kafka_consumer.py  kafka_parser.py  models.py  parsers.py  pg_listener.py
src/r2g/connectors/: arango_reader.py  arango_writer.py  base.py  clickhouse.py  csv_source.py  kafka_source.py  mssql.py  mysql.py  postgres.py  session.py  snowflake.py
src/r2g/generators/: arangoimport.py  visualizer.py
src/r2g/input/: dump_reader.py
src/r2g/llm/: __init__.py  anthropic_provider.py  base.py  grounding.py  ontology.py  openai_provider.py  prompt.py  sampling.py
src/r2g/schemas/: __init__.py  csi_v1.schema.json
src/r2g/streaming/: pipeline.py
src/r2g/temporal/: __init__.py  applier.py  models.py  queries.py
src/r2g/transformers/: converter.py  edge_transformer.py  node_transformer.py
src/r2g/ui/: server.py
src/r2g/ui/static/: index.html
tests/: conftest.py  test_arango_writer.py  test_arangoimport.py  test_catalog.py  test_catalog_enhanced.py  test_catalog_registry.py  test_catalogs_base.py  test_cdc_conflict.py  test_cdc_delta_transformer.py  test_cdc_handler.py  test_cdc_models.py  test_cdc_parsers.py  test_cdc_pg_listener.py  test_classification.py  test_cli.py  test_cli_analyze_denorm.py  test_cli_catalog.py  test_cli_entitlements.py  test_cli_ontology.py  test_cli_resync_classifications.py  test_cli_runtime.py  test_cli_source_dump.py  test_cli_source_snapshot_classifications.py  test_clickhouse_connector.py  test_config.py  test_config_migrate.py  test_connectors_base.py  test_csi.py  test_csv_connector.py  test_csv_import_generator.py  test_data_validator.py  test_denorm.py  test_dlq.py  test_dump_reader.py  test_edge_transformer.py  test_expressions.py  test_fk_inference.py  test_governance.py  test_kafka_connector.py  test_kafka_consumer.py  (+35 more)
tests/fixtures/serialization_compat/: reference_mapping.json  reference_schema.json
tests/integration/: conftest.py  test_mssql_e2e.py  test_mysql_e2e.py  test_openmetadata_e2e.py  test_rsa_introspection_parity.py  test_stream_e2e.py  test_temporal_e2e.py
