[project]
name = "r2g-arango"
version = "0.1.0"
description = "Project relational and structured data sources as a graph in ArangoDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Arthur Keen", email = "aakeen@yahoo.com" },
]
maintainers = [
    { name = "Arthur Keen", email = "aakeen@yahoo.com" },
]
keywords = [
    "arangodb",
    "etl",
    "graph",
    "graph-database",
    "postgresql",
    "snowflake",
    "cdc",
    "kafka",
    "relational-to-graph",
    "data-pipeline",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.15.0",
    "psycopg[binary]>=3.1.0",
    "python-arango>=7.5.0",
    "pydantic>=2.5.0",
    "rich>=13.0.0",
    "polars>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3.0"]
ui = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "httpx>=0.27.0"]
mcp = ["mcp[cli]>=1.20.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
dev = ["ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/ArthurKeen/r2g-arango"
Repository = "https://github.com/ArthurKeen/r2g-arango"
Issues = "https://github.com/ArthurKeen/r2g-arango/issues"
Changelog = "https://github.com/ArthurKeen/r2g-arango/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ArthurKeen/r2g-arango/tree/main/docs"

[project.scripts]
r2g = "r2g.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
r2g = ["ui/static/*", "ui/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live PostgreSQL and ArangoDB (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/r2g/generators/visualizer.py" = ["E501"]
